[tool.poetry]
name = "api-test"
version = "0.1.0"
description = ""
authors = ["Vadim <vadim.marakushin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "4.2"
psycopg = {extras = ["binary", "pool"], version = "^3.2.3"}
djangorestframework = "^3.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
